// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Component renders error toast correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style=""
    tabindex="-1"
  >
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      tabindex="0"
    />
    <ol
      class="fixed top-0 right-0 gap-2 z-[100] flex max-h-screen w-full flex-col p-4 sm:right-0 md:max-w-[420px] overflow-hidden"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="off"
        class="group pointer-events-auto relative flex w-full items-center justify-between space-x-4 overflow-hidden transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-top-full data-[state=open]:sm:slide-in-from-bottom-full border text-foreground border-l-8 p-4 shadow-lg rounded-lg border-red-600 bg-red-100"
        data-radix-collection-item=""
        data-state="open"
        data-swipe-direction="right"
        role="status"
        style="user-select: none;"
        tabindex="0"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex item-center w-6"
          >
            <div
              class="flex justify-center items-center w-6 h-6 rounded-full bg-red-600"
            >
              <svg
                class="lucide lucide-x text-white w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </div>
          </div>
          <div
            class="grid gap-1"
          >
            <div
              class="text-sm font-semibold"
            >
              Error!
            </div>
            <div
              class="text-sm opacity-90"
            >
              Something went wrong.
            </div>
          </div>
        </div>
        <button
          class="absolute right-2 top-2 rounded-md p-1 text-foreground/50 opacity-0 transition-opacity hover:text-foreground focus:opacity-100 focus:outline-none focus:ring-2 group-hover:opacity-100 group-[.destructive]:text-red-300 group-[.destructive]:hover:text-red-50 group-[.destructive]:focus:ring-red-400 group-[.destructive]:focus:ring-offset-red-600"
          data-radix-toast-announce-exclude=""
          toast-close=""
          type="button"
        >
          <svg
            class="lucide lucide-x h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </li>
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders success toast correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style=""
    tabindex="-1"
  >
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      tabindex="0"
    />
    <ol
      class="fixed top-0 right-0 gap-2 z-[100] flex max-h-screen w-full flex-col p-4 sm:right-0 md:max-w-[420px] overflow-hidden"
      tabindex="-1"
    >
      <li
        aria-atomic="true"
        aria-live="off"
        class="group pointer-events-auto relative flex w-full items-center justify-between space-x-4 overflow-hidden transition-all data-[swipe=cancel]:translate-x-0 data-[swipe=end]:translate-x-[var(--radix-toast-swipe-end-x)] data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)] data-[swipe=move]:transition-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[swipe=end]:animate-out data-[state=closed]:fade-out-80 data-[state=closed]:slide-out-to-right-full data-[state=open]:slide-in-from-top-full data-[state=open]:sm:slide-in-from-bottom-full border text-foreground border-l-8 p-4 shadow-lg rounded-lg border-green-primary bg-green-100"
        data-radix-collection-item=""
        data-state="open"
        data-swipe-direction="right"
        role="status"
        style="user-select: none;"
        tabindex="0"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex item-center w-6"
          >
            <div
              class="flex justify-center items-center w-6 h-6 rounded-full bg-green-primary"
            >
              <svg
                class="lucide lucide-check text-white w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </div>
          </div>
          <div
            class="grid gap-1"
          >
            <div
              class="text-sm font-semibold"
            >
              Success!
            </div>
            <div
              class="text-sm opacity-90"
            >
              Your action was successful.
            </div>
          </div>
        </div>
        <button
          class="absolute right-2 top-2 rounded-md p-1 text-foreground/50 opacity-0 transition-opacity hover:text-foreground focus:opacity-100 focus:outline-none focus:ring-2 group-hover:opacity-100 group-[.destructive]:text-red-300 group-[.destructive]:hover:text-red-50 group-[.destructive]:focus:ring-red-400 group-[.destructive]:focus:ring-offset-red-600"
          data-radix-toast-announce-exclude=""
          toast-close=""
          type="button"
        >
          <svg
            class="lucide lucide-x h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </li>
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
